ACS-1630 : Storage classes - REST api - GET /nodes/{nodeId}    - updated endpoint